Update to newer engine

--- a/pom.xml
+++ b/pom.xml
@@ -28,19 +28,184 @@
       <version>2.8.1</version>
     </dependency>
     <dependency>
-      <groupId>org.glowroot</groupId>
-      <artifactId>glowroot-instrumentation-api</artifactId>
-      <version>0.13.5-SNAPSHOT</version>
+      <groupId>org.glowroot.xyzzy</groupId>
+      <artifactId>xyzzy-instrumentation-api</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>org.glowroot</groupId>
-      <artifactId>glowroot-engine</artifactId>
-      <version>0.13.5-SNAPSHOT</version>
+      <groupId>org.glowroot.xyzzy</groupId>
+      <artifactId>xyzzy-engine</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
-      <groupId>org.glowroot.instrumentation</groupId>
-      <artifactId>glowroot-instrumentation-all</artifactId>
-      <version>0.13.5-SNAPSHOT</version>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-apache-http-async-client</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-apache-http-client</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-async-http-client</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-axis-client</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-camel</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-cassandra</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-ejb</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-elasticsearch</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-executor</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-grails</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-hibernate</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-http-url-connection</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-java-http-server</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-java-mail</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-java-util-logging</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-jaxrs</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-jaxws</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-jdbc</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-jms</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-jsf</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-jsp</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-kafka</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-log4j</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-logback</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-mongodb</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-netty</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-okhttp</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-play</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-quartz</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-redis</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-servlet</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-spring</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-struts</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glowroot.xyzzy.instrumentation</groupId>
+      <artifactId>instrumentation-wiremock-http-client</artifactId>
+      <version>0.5.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -68,6 +233,16 @@
     </dependency>
   </dependencies>
 
+  <repositories>
+    <repository>
+      <id>snapshot-repository</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <build>
     <plugins>
       <plugin>
@@ -83,7 +258,7 @@
               <artifactSet>
                 <excludes>
                   <!-- do not shade instrumentation, it is added back in below -->
-                  <exclude>org.glowroot.instrumentation:glowroot-instrumentation-all</exclude>
+                  <exclude>org.glowroot.xyzzy.instrumentation:glowroot-instrumentation-all</exclude>
                   <exclude>org.glowroot.build:glowroot-build-checker-jdk6</exclude>
                 </excludes>
               </artifactSet>
@@ -153,7 +328,7 @@
                     java util logging from being initialized early (e.g. in the case of wildfly which
                     wants to do some setup before jul is initialized) -->
                   <pattern>java.util.logging</pattern>
-                  <shadedPattern>org.glowroot.engine.jul</shadedPattern>
+                  <shadedPattern>org.glowroot.xyzzy.engine.jul</shadedPattern>
                   <excludes>
                     <!-- don't shade the system property key "java.util.logging.manager" (unshaded
                       string is needed in LazyPlatformMBeanServer) -->
@@ -216,7 +391,7 @@
               </dependencyReducedPomLocation>
               <artifactSet>
                 <includes>
-                  <include>org.glowroot.instrumentation:*</include>
+                  <include>org.glowroot.xyzzy.instrumentation:*</include>
                 </includes>
               </artifactSet>
             </configuration>
